MOBICS-2980 [Webapp][Lists] Lists do not appear correctly aligned

--- a/war/src/main/webapp/css/default.css
+++ b/war/src/main/webapp/css/default.css
@@ -706,6 +706,8 @@ nav.threeColumnList  ul li a > div:nth-child(2) > div:nth-child(1) > span {
     font-size: 100%;
     float: left;
     width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 nav.threeColumnList  ul li a > div:nth-child(2) > div:nth-child(1) > span:nth-child(1) {
     font-weight: bold;
@@ -715,16 +717,12 @@ nav.threeColumnList  ul li a > div:nth-child(2) > div:nth-child(1) > span:nth-ch
     color: #333;
     display: inline-block;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
 
 nav.threeColumnList  ul li a > div:nth-child(2) > div:nth-child(1) > span:nth-child(3) {
     color: #999;
     display: inline-block;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
 
 nav.threeColumnList  ul li a > div:nth-child(2) > div:nth-child(2) {
